--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,5 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        ./test.sh
+        export PYTHONPATH=’./src’
+        putest test/test_YamlDataReader.py
