--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,5 +29,7 @@ jobs:
         pip install -r requirements.txt
     - name: Test with pytest
       run: |
+        pytest test/test_main.py
+        pytest test/test_CalcRating.py
         pytest test/test_StudentRating.py
         pytest test/test_YamlDataReader.py
